# riff

./: Cargo.toml
example/: a.md  b.md  foo.rb  foo2.rb
src/: color.rs  config.rs  diff.rs  hunk.rs  printer.rs  riff.rs
