[package]
name = "riff"
version = "0.1.0"
authors = ["ming li <mingyli34@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
clap = "2.33.0"
itertools = "0.8.2"

[[bin]]
name = "riff"
path = "src/riff.rs"
